#364 Misc accessibility fixes like alt-text, aria-labels, headings, contrast, etc.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -212,7 +212,7 @@ input[type="number"] {
 }
 
 .basic-button {
-  background-color: hsl(84deg 55% 33%);
+  background-color: rgb(62, 87, 25);
   color: white;
   border: none;
   border-radius: 4px;
